[package]
name = "fluxus-source-gharchive"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Fluxus Team"]
description = "A Fluxus source component for processing and analyzing GitHub Archive data streams, providing efficient access to historical GitHub event data."
homepage = "https://github.com/fluxus-labs/fluxus-source-gharchive"
repository = "https://github.com/fluxus-labs/fluxus-source-gharchive"
readme = "README.md"
categories = ["database", "development-tools", "asynchronous", "science"]
keywords = [
    "stream-processing",
    "real-time",
    "data-processing",
    "analytics",
    "async",
    "gharchive",
]

[dependencies]
fluxus = { version="0.2", features = ["full"] }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tokio-util = { version = "0.7.15", features = ["io"] }
reqwest = { version = "0.12.15", features = ["stream"] }

chrono = { version = "0.4", features = ["serde"] }
async-compression = { version = "0.4.23", features = ["all"] }
url = { version = "2.5.4" }

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
tempfile = "3"